[package]
name = "irys-actors"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
assert_matches = "1.5.0"
irys-types.workspace = true
irys-database.workspace = true
irys-packing.workspace = true
irys-storage.workspace = true
irys-config.workspace = true
irys-vdf.workspace = true
irys-efficient-sampling.workspace = true

actix.workspace = true
nodit.workspace = true
actix-rt.workspace = true
env_logger = "0.11.5"

tokio.workspace = true
reth-db.workspace = true
irys-primitives.workspace = true
eyre.workspace = true
openssl.workspace = true
irys-reth-node-bridge.workspace = true
reth.workspace = true
alloy-rpc-types-engine.workspace = true
tracing.workspace = true
tempfile.workspace = true
irys-testing-utils.workspace = true
base58.workspace = true
futures.workspace = true

[lints]
workspace = true

[features]
nvidia = ["irys-packing/nvidia"]
