[package]
name = "irys-actors"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
assert_matches = "1.5.0"
irys-types.workspace = true
irys-database.workspace = true
irys-packing.workspace = true
irys-storage.workspace = true
irys-config.workspace = true
irys-price-oracle.workspace = true
irys-efficient-sampling.workspace = true
irys-vdf.workspace = true

actix.workspace = true
nodit.workspace = true
actix-rt.workspace = true

tokio.workspace = true
lru.workspace = true
reth-db.workspace = true
irys-primitives.workspace = true
eyre.workspace = true
openssl.workspace = true
irys-reth-node-bridge.workspace = true
tracing.workspace = true
tempfile.workspace = true
irys-testing-utils.workspace = true
base58.workspace = true
futures.workspace = true
rust_decimal.workspace = true
serde_json = { workspace = true, features = ["std", "raw_value"] }
irys-reward-curve.workspace = true
async-trait.workspace = true
reth.workspace = true
irys-reth.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-signer-local.workspace = true
alloy-network.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
reth-transaction-pool.workspace = true

[dev-dependencies]
irys-types = { workspace = true, features = ["test-utils"] }
irys-config = { workspace = true, features = ["test-utils"] }
irys-database = { workspace = true, features = ["test-utils"] }
irys-api-client = { workspace = true, features = ["test-utils"] }
test-log.workspace = true
rstest.workspace = true
rand.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true

[features]
nvidia = ["irys-packing/nvidia"]
test-utils = ["irys-types/test-utils", "irys-config/test-utils"]
