[package]
name = "irys-api-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest.workspace = true
eyre.workspace = true
irys-types.workspace = true
serde.workspace = true
tokio.workspace = true
async-trait = "0.1"
base58.workspace = true
tracing = { workspace = true, optional = true }

[features]
default = []
test-utils = ["tracing"]

[lints]
workspace = true
