[package]
build = "build/main.rs"
edition.workspace = true
name = "irys-c"
rust-version.workspace = true
version = "0.1.0"

[dependencies]
# cxx = "1.0"
alloy-core.workspace = true
eyre.workspace = true
irys-primitives.workspace = true
irys-types.workspace = true
libc = "0.2.0"
openssl.workspace = true
rand.workspace = true

[build-dependencies]
bindgen = "0.70.1"
cc = "1.0"
openssl-src = "300.3.2"
pkg-config = "0.3.31"
vcpkg = "0.2.8"


[lints]
workspace = true

[features]
hip = []
nvidia = []
