[package]
edition = "2021"
name = "irys-chain"
version = "0.1.0"

[[bin]]
name = "irys"
path = "src/main.rs"

[features]
nvidia = ["irys-actors/nvidia"]
test-utils = []

[dependencies]
# Irys
irys-database.workspace = true
irys-storage.workspace = true
irys-reth-node-bridge.workspace = true
irys-types = { workspace = true, features = ["test-utils"] }
irys-api-server.workspace = true
irys-config.workspace = true
irys-testing-utils.workspace = true
irys-actors.workspace = true
irys-packing.workspace = true
irys-vdf.workspace = true
irys-price-oracle.workspace = true
irys-p2p.workspace = true
irys-api-client.workspace = true
irys-reward-curve.workspace = true

base58.workspace = true
color-eyre.workspace = true
tracing-error.workspace = true
eyre.workspace = true
rand.workspace = true
nodit.workspace = true
reth-db.workspace = true
reth-primitives.workspace = true
reth.workspace = true
toml.workspace = true
serde_json = "1"
sha2 = "0.10"
actix-rt.workspace = true
actix-web.workspace = true
actix-http.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

alloy-network = { path = "../../ext/alloy/crates/network" }
alloy-signer-local.workspace = true
alloy-core.workspace = true
actix.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true

awc.workspace = true
modular-bitfield.workspace = true
reth-cli-runner.workspace = true
futures.workspace = true
reth-tracing.workspace = true
hex.workspace = true
test-fuzz.workspace = true
k256 = { version = "0.13", default-features = false, features = [
	"ecdsa",
	"serde",
] }
alloy-sol-macro = { workspace = true, features = ["json"] }
alloy-provider.workspace = true
core_affinity = "0.8.1"

[dev-dependencies]
assert_matches = "1.5.0"
awc.workspace = true
irys-actors = { workspace = true, features = ["test-utils"] }
alloy-sol-types.workspace = true
alloy-contract.workspace = true
test-log.workspace = true
rstest.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
semver.workspace = true

[package.metadata.cargo-machete]
ignored = ["alloy-sol-types", "alloy-contract"]
