[package]
name = "irys-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
irys-database.workspace = true
color-eyre.workspace = true
tracing-error.workspace = true
eyre.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reth-tracing.workspace = true
irys-types = { workspace = true, features = ["test-utils"] }
reth-node-core.workspace = true
serde_json.workspace = true
clap = { workspace = true, features = ["derive"] }

[lints]
workspace = true
