[package]
name = "irys-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
reth-primitives.workspace = true
irys-types.workspace = true
eyre.workspace = true
reth-chainspec.workspace = true
irys-primitives.workspace = true
once_cell.workspace = true
reth-cli.workspace = true
tracing.workspace = true
serde.workspace = true
[lints]
workspace = true
