[package]
name = "irys-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
test-utils = ["irys-types/test-utils"]

[dependencies]
reth-primitives.workspace = true
irys-types.workspace = true
eyre.workspace = true
reth-chainspec.workspace = true
irys-primitives.workspace = true
once_cell.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
irys-types = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
