[package]
name = "irys-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
test-utils = ["irys-types/test-utils"]

[dependencies]
irys-types.workspace = true
eyre.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true
reth-chainspec.workspace = true
alloy-core.workspace = true
alloy-eips.workspace = true
alloy-genesis.workspace = true
reth-primitives-traits.workspace = true

[dev-dependencies]
irys-types = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
