[package]
name = "irys-database"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
test-utils = []

[dependencies]
alloy-primitives.workspace = true
actix.workspace = true
base58.workspace = true
tokio = { workspace = true, features = ["fs"] }
irys-config.workspace = true
arbitrary = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
bytes.workspace = true
modular-bitfield.workspace = true
eyre.workspace = true
irys-types.workspace = true
irys-primitives.workspace = true
tempfile.workspace = true
tracing.workspace = true
irys-testing-utils.workspace = true
test-fuzz.workspace = true
reth-db.workspace = true
reth-db-api.workspace = true
reth-node-metrics.workspace = true
reth-codecs.workspace = true
paste.workspace = true
strum.workspace = true

[dev-dependencies]
irys-config = { workspace = true, features = ["test-utils"] }
test-log.workspace = true

[lints]
workspace = true
