[package]
name = "irys-domain"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
test-utils = ["irys-types/test-utils"]

[dependencies]
actix.workspace = true
openssl.workspace = true
eyre.workspace = true
irys-types = { workspace = true, features = ["test-utils"] }
irys-config.workspace = true
irys-database.workspace = true
irys-primitives.workspace = true
irys-storage.workspace = true
tracing.workspace = true
base58.workspace = true
reth-db.workspace = true
rust_decimal.workspace = true
tokio.workspace = true

[dev-dependencies]
test-log.workspace = true
assert_matches = "1.5.0"
rstest.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
irys-testing-utils.workspace = true

[lints]
workspace = true
