[package]
name = "irys-gossip-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal dependencies
irys-types = { path = "../types", features = ["test-utils"] }
irys-primitives = { path = "../primitives" }
irys-database = { path = "../database" }
irys-api-client.workspace = true
# Other dependencies
actix-web = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
eyre.workspace = true
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
irys-actors.workspace = true
actix.workspace = true
serde = { workspace = true }

[dev-dependencies]
irys-testing-utils.workspace = true
irys-storage.workspace = true
async-trait = "0.1"

[lints]
workspace = true
