[package]
name = "irys-gossip-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal dependencies
irys-actors.workspace = true
irys-types.workspace = true
irys-primitives.workspace = true
irys-api-client.workspace = true
# Other dependencies
actix-web = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
eyre.workspace = true
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
actix.workspace = true
serde = { workspace = true }
reth-tasks = { workspace = true }
base58.workspace = true
irys-database.workspace = true
actix-rt.workspace = true

[dev-dependencies]
irys-testing-utils.workspace = true
irys-storage.workspace = true
async-trait = "0.1"
irys-types = { workspace = true, features = ["test-utils"] }
irys-api-client = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
